Move the  folder to inside the  directory and git ignore

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,6 +27,7 @@ services:
         container_name: wordpress
         volumes:
             - .:/var/www/html
+            - ./docker/wp-uploads:/var/www/html/wp-content/uploads
         environment:
             - APACHE_RUN_USER=#1000
             - APACHE_RUN_GROUP=#1000
