--- a/docker/wordpress.conf
+++ b/docker/wordpress.conf
@@ -4,4 +4,5 @@
     SSLEngine on
     SSLCertificateFile "/etc/apache2/ssl/server.crt"
     SSLCertificateKeyFile "/etc/apache2/ssl/server.key"
+    ErrorLog "/tmp/wordpress-error.log"
 </VirtualHost>
