--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
         image: mysql:5.7
         container_name: wordpress-db
         restart: unless-stopped
-        command: --init-file /data/application/init.sql
+        # command: --init-file /data/application/init.sql
         volumes:
             - ./docker/run/var:/var/lib/mysql
             - ./docker/init.sql:/data/application/init.sql
