Adjust apache log level

--- a/docker/wordpress.conf
+++ b/docker/wordpress.conf
@@ -5,5 +5,5 @@
     SSLCertificateFile "/etc/apache2/ssl/server.crt"
     SSLCertificateKeyFile "/etc/apache2/ssl/server.key"
     ErrorLog "/tmp/wordpress-error.log"
-    LogLevel info
+    LogLevel warn
 </VirtualHost>
